--- a/src/main/resources/azkaban.yml
+++ b/src/main/resources/azkaban.yml
@@ -15,3 +15,4 @@ azkaban:
           - Error writing initial node
           - Engine - prioriy set to 0, because NumberFormatException, the value is
           - Failed to get database default, returning NoSuchObjectException
+          - Error! Directory
