--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -18,3 +18,31 @@ spring:
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
 server:
   port: 8080
+
+management:
+    endpoint:
+        health:
+            show-details: always
+    endpoints:
+        web:
+            exposure:
+                include: '*'
+spring:
+    redis:
+        cluster:
+            max-redirects: 3
+            nodes:
+            - 10.37.253.42:6481
+            - 10.37.253.42:6482
+            - 10.37.253.42:6483
+            - 10.37.253.42:6484
+            - 10.37.253.42:6485
+            - 10.37.253.42:6486
+        database: 0
+        lettuce:
+            pool:
+                max-active: 20
+                max-idle: 10
+                max-wait: 6000
+                min-idle: 5
+        timeout: 1000
