azkaban监控 保存错误信息

--- a/src/main/resources/azkaban.yml
+++ b/src/main/resources/azkaban.yml
@@ -10,6 +10,7 @@ azkaban:
           - 13581973403 #刘斌侠
           - 15210658184 #周泰
           - 13522832262 #果雨
+          - 18710110328 #李建军
         blacklist:
           - Error
           - ERROR
