--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,6 +1,9 @@
 spring:
   application:
     name: system-monitor
+
+
+  #redis设置
   redis:
     cluster:
       max-redirects: 3
@@ -19,6 +22,9 @@ spring:
             max-wait: 6000
             min-idle: 5
     timeout: 1000
+
+
+  #kafka对列设置
   kafka:
     producer:
       batch-size: 16384
@@ -34,6 +40,16 @@ spring:
       auto-commit-interval: 100
       enable-auto-commit: true
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+
+
+  #数据源设置
+  datasource:
+    #连接MySQL
+    url: jdbc:mysql://mysql-qddata.qiandingyun.com:3306/ds
+    username: ds
+    password: 123456!
+    driver-class-name: com.mysql.jdbc.Driver
+
 server:
   port: 8080
 
@@ -45,3 +61,4 @@ management:
         web:
             exposure:
                 include: '*'
+
