azkaban监控 添加白名单 Shuffle Errors

--- a/src/main/resources/azkaban.yml
+++ b/src/main/resources/azkaban.yml
@@ -28,3 +28,4 @@ azkaban:
           - Failed to get database default, returning NoSuchObjectException
           - Error! Directory
           - SparkListenerBus has already stopped
+          - Shuffle Errors
