azkaban监控 名单放入数据库中报存

--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,7 @@
 				<executions>
 					<execution>
 						<id>Generate MyBatis Artifacts</id>
+						<phase>deploy</phase>
 						<goals>
 							<goal>generate</goal>
 						</goals>
